--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -4,7 +4,8 @@
   "holonomicMode": true,
   "pathFolders": [
     "BNSAuto",
-    "BSAuto"
+    "BSAuto",
+    "CenterAuto"
   ],
   "autoFolders": [],
   "defaultMaxVel": 3.0,
