--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -17,9 +17,9 @@
   "robotMOI": 6.883,
   "robotTrackwidth": 0.546,
   "driveWheelRadius": 0.051,
-  "driveGearing": 6.746045131,
-  "maxDriveSpeed": 5.45,
-  "driveMotorType": "NEO",
+  "driveGearing": 8.14122807,
+  "maxDriveSpeed": 4.45,
+  "driveMotorType": "vortex",
   "driveCurrentLimit": 60.0,
   "wheelCOF": 1.2,
   "flModuleX": 0.273,
