--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -8,21 +8,21 @@
     "CenterAuto"
   ],
   "autoFolders": [],
-  "defaultMaxVel": 3.0,
+  "defaultMaxVel": 2.0,
   "defaultMaxAccel": 3.0,
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 74.088,
+  "robotMass": 62.0,
   "robotMOI": 6.883,
   "robotTrackwidth": 0.546,
-  "driveWheelRadius": 0.051,
-  "driveGearing": 8.14122807,
-  "maxDriveSpeed": 4.45,
+  "driveWheelRadius": 0.0431,
+  "driveGearing": 8.141,
+  "maxDriveSpeed": 3.5,
   "driveMotorType": "vortex",
   "driveCurrentLimit": 60.0,
   "wheelCOF": 1.2,
-  "flModuleX": 0.3429,
+  "flModuleX": 0.343,
   "flModuleY": 0.263525,
   "frModuleX": 0.343,
   "frModuleY": -0.263525,
