Rename PP autos for Processor / Non Processor side

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -3,8 +3,8 @@
   "robotLength": 1.0,
   "holonomicMode": true,
   "pathFolders": [
-    "BNSAuto",
-    "BSAuto",
+    "ProcessorSide",
+    "NonProcessorSide",
     "CenterAuto"
   ],
   "autoFolders": [],
