Update wpilib, add PP paths and auto for elevator motion in parallel with paths

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -3,11 +3,15 @@
   "robotLength": 1.0,
   "holonomicMode": true,
   "pathFolders": [
-    "ProcessorSide",
+    "CenterAuto",
+    "Test Paths",
     "NonProcessorSide",
-    "CenterAuto"
+    "ProcessorSide"
   ],
-  "autoFolders": [],
+  "autoFolders": [
+    "TestAutos",
+    "SevenRiversAutos"
+  ],
   "defaultMaxVel": 2.0,
   "defaultMaxAccel": 3.0,
   "defaultMaxAngVel": 540.0,
