Auto and Tele Adjustments

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -4,9 +4,11 @@
   "holonomicMode": true,
   "pathFolders": [
     "CenterAuto",
-    "Test Paths",
+    "ProcessorElevator",
+    "NonProcessorElevator",
     "NonProcessorSide",
-    "ProcessorSide"
+    "ProcessorSide",
+    "Test Paths"
   ],
   "autoFolders": [
     "TestAutos",
